--- a/security.html
+++ b/security.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Security</title>
+    <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 <body>
         <ul class="navbar">
-            <li><a href="index.html">Top News</a></li>
-            <li><a href="us.html">U.S. News</a></li>
-            <li><a href="world.html">World News</a></li>
-            <li><a href="business.html">Business</a></li>
-            <li class="active"><a href="security.html">Security</a></li>
-            <li><a href="technology.html">Technology</a></li>
+            <a class="icon" href="javascript:void(0);" onclick="myFunction()">
+                <i class="fa fa-bars"></i>
+            </a>
+            <li class="navbar-link"><a href="index.html">Top News</a></li>
+            <li class="navbar-link"><a href="us.html">U.S. News</a></li>
+            <li class="navbar-link"><a href="world.html">World News</a></li>
+            <li class="navbar-link"><a href="business.html">Business</a></li>
+            <li class="navbar-link" id="active-navbar-link"><a href="security.html">Security</a></li>
+            <li class="navbar-link"><a href="technology.html">Technology</a></li>
         </ul>
         <h2 id="talkbacksh-news"><a href="https://talkback.sh/">Talkback.sh News</a></h2>
         <p class="last-updated">Thu, 15 Jan 2026 19:00:15 +0000</p>
@@ -106,7 +111,7 @@ Then organizations got ambitious.
 Instead of personal copilots, companies started deploying shared organizational AI agents - agents embedded into HR, IT, engineering, customer support, and operations. Agents that don&amp;rsquo;t just suggest, but act. Agents</a></li>
         </ul>
         <h2 id="sans-internet-storm-center"><a href="https://isc.sans.edu/">SANS Internet Storm Center</a></h2>
-        <p class="last-updated">Thu, 15 Jan 2026 23:30:04 +0000</p>
+        <p class="last-updated">Thu, 15 Jan 2026 23:35:03 +0000</p>
         <ul class="news-list">
             <li><a href="https://isc.sans.edu/diary/rss/32632" title="&amp;#x5b;This is a Guest Diary by Matthew Presnal, an ISC intern as part of the SANS.edu BACS program&amp;#x5d;&amp;#xd;" target="_blank"><strong>Battling Cryptojacking, Botnets, and IABs &amp;#x5b;Guest Diary&amp;#x5d;, (Thu, Jan 15th)</strong><br>&amp;#x5b;This is a Guest Diary by Matthew Presnal, an ISC intern as part of the SANS.edu BACS program&amp;#x5d;&amp;#xd;</a></li>
             <li><a href="https://isc.sans.edu/diary/rss/32630" title="" target="_blank"><strong>ISC Stormcast For Thursday, January 15th, 2026 https://isc.sans.edu/podcastdetail/9768, (Thu, Jan 15th)</strong><br></a></li>
