deploy: 653f4540b619022d6c9c46f9458f3cc4b651fda1

--- a/security.html
+++ b/security.html
@@ -91,8 +91,9 @@ The vulnerability, tracked as CVE-2026-23550 (CVSS score: 10.0), has been descri
 'Only a single click on a legitimate Microsoft link is required to compromise victims,' Varonis security</a></li>
         </ul>
         <h2 id="sans-internet-storm-center"><a href="https://isc.sans.edu/">SANS Internet Storm Center</a></h2>
-        <p class="last-updated">Sat, 17 Jan 2026 09:10:03 +0000</p>
+        <p class="last-updated">Sat, 17 Jan 2026 09:30:03 +0000</p>
         <ul class="news-list">
+            <li><a href="https://isc.sans.edu/diary/rss/32636" title="Wireshark release 4.6.3 fixes 4 vulnerabilities and 9 bugs.&amp;#xd;" target="_blank"><strong>Wireshark 4.6.3 Released, (Sat, Jan 17th)</strong><br>Wireshark release 4.6.3 fixes 4 vulnerabilities and 9 bugs.&amp;#xd;</a></li>
             <li><a href="https://isc.sans.edu/diary/rss/32634" title="" target="_blank"><strong>ISC Stormcast For Friday, January 16th, 2026 https://isc.sans.edu/podcastdetail/9770, (Fri, Jan 16th)</strong><br></a></li>
             <li><a href="https://isc.sans.edu/diary/rss/32632" title="&amp;#x5b;This is a Guest Diary by Matthew Presnal, an ISC intern as part of the SANS.edu BACS program&amp;#x5d;&amp;#xd;" target="_blank"><strong>Battling Cryptojacking, Botnets, and IABs &amp;#x5b;Guest Diary&amp;#x5d;, (Thu, Jan 15th)</strong><br>&amp;#x5b;This is a Guest Diary by Matthew Presnal, an ISC intern as part of the SANS.edu BACS program&amp;#x5d;&amp;#xd;</a></li>
             <li><a href="https://isc.sans.edu/diary/rss/32630" title="" target="_blank"><strong>ISC Stormcast For Thursday, January 15th, 2026 https://isc.sans.edu/podcastdetail/9768, (Thu, Jan 15th)</strong><br></a></li>
@@ -102,7 +103,6 @@ The vulnerability, tracked as CVE-2026-23550 (CVSS score: 10.0), has been descri
             <li><a href="https://isc.sans.edu/diary/rss/32622" title="" target="_blank"><strong>ISC Stormcast For Tuesday, January 13th, 2026 https://isc.sans.edu/podcastdetail/9764, (Tue, Jan 13th)</strong><br></a></li>
             <li><a href="https://isc.sans.edu/diary/rss/32620" title="" target="_blank"><strong>ISC Stormcast For Monday, January 12th, 2026 https://isc.sans.edu/podcastdetail/9762, (Mon, Jan 12th)</strong><br></a></li>
             <li><a href="https://isc.sans.edu/diary/rss/32616" title="YARA-X&amp;&amp;#x23&amp;#x3b;x26&amp;#x3b;&amp;#x23&amp;#x3b;39&amp;#x3b;s 1.11.0 release brings a new feature: hash function warnings.&amp;#xd;" target="_blank"><strong>YARA-X 1.11.0 Release: Hash Function Warnings, (Sun, Jan 11th)</strong><br>YARA-X&amp;&amp;#x23&amp;#x3b;x26&amp;#x3b;&amp;#x23&amp;#x3b;39&amp;#x3b;s 1.11.0 release brings a new feature: hash function warnings.&amp;#xd;</a></li>
-            <li><a href="https://isc.sans.edu/diary/rss/32614" title="Reverse engineers must have a good understanding of the environment where malware are executed (read: the operating system). In a previous diary, I talked about malicious code that could be executed when loading a DLL&amp;#x5b;1&amp;#x5d;. Today, I&amp;#x27ll show you how a malware can hide suspicious information related to created processes.&amp;#xd;" target="_blank"><strong>Malicious Process Environment Block Manipulation, (Fri, Jan 9th)</strong><br>Reverse engineers must have a good understanding of the environment where malware are executed (read: the operating system). In a previous diary, I talked about malicious code that could be executed when loading a DLL&amp;#x5b;1&amp;#x5d;. Today, I&amp;#x27ll show you how a malware can hide suspicious information related to created processes.&amp;#xd;</a></li>
         </ul>
         <h2 id="krebs-on-security"><a href="https://krebsonsecurity.com/">Krebs on Security</a></h2>
         <p class="last-updated">Wed, 14 Jan 2026 00:47:38 +0000</p>
