--- a/security.html
+++ b/security.html
@@ -91,18 +91,8 @@ The vulnerability has been codenamed CodeBreach by cloud security company Wiz. T
 The vulnerability has been codenamed CodeBreach by cloud security company Wiz. The issue was fixed by AWS in September 2025 following responsible disclosure on</a></li>
         </ul>
         <h2 id="sans-internet-storm-center"><a href="https://isc.sans.edu/">SANS Internet Storm Center</a></h2>
-        <p class="last-updated">Mon, 19 Jan 2026 07:40:07 +0000</p>
+        <p class="last-updated"></p>
         <ul class="news-list">
-            <li><a href="https://isc.sans.edu/diary/rss/32618" title="I&amp;&amp;#x23&amp;#x3b;x26&amp;#x3b;&amp;#x23&amp;#x3b;39&amp;#x3b;ve seen many API requests for different LLMs in the honeypot logs.&amp;#xd;" target="_blank"><strong>'How many states are there in the United States&amp;#x3f;', (Sun, Jan 18th)</strong><br>I&amp;&amp;#x23&amp;#x3b;x26&amp;#x3b;&amp;#x23&amp;#x3b;39&amp;#x3b;ve seen many API requests for different LLMs in the honeypot logs.&amp;#xd;</a></li>
-            <li><a href="https://isc.sans.edu/diary/rss/32636" title="Wireshark release 4.6.3 fixes 4 vulnerabilities and 9 bugs.&amp;#xd;" target="_blank"><strong>Wireshark 4.6.3 Released, (Sat, Jan 17th)</strong><br>Wireshark release 4.6.3 fixes 4 vulnerabilities and 9 bugs.&amp;#xd;</a></li>
-            <li><a href="https://isc.sans.edu/diary/rss/32634" title="" target="_blank"><strong>ISC Stormcast For Friday, January 16th, 2026 https://isc.sans.edu/podcastdetail/9770, (Fri, Jan 16th)</strong><br></a></li>
-            <li><a href="https://isc.sans.edu/diary/rss/32632" title="&amp;#x5b;This is a Guest Diary by Matthew Presnal, an ISC intern as part of the SANS.edu BACS program&amp;#x5d;&amp;#xd;" target="_blank"><strong>Battling Cryptojacking, Botnets, and IABs &amp;#x5b;Guest Diary&amp;#x5d;, (Thu, Jan 15th)</strong><br>&amp;#x5b;This is a Guest Diary by Matthew Presnal, an ISC intern as part of the SANS.edu BACS program&amp;#x5d;&amp;#xd;</a></li>
-            <li><a href="https://isc.sans.edu/diary/rss/32630" title="" target="_blank"><strong>ISC Stormcast For Thursday, January 15th, 2026 https://isc.sans.edu/podcastdetail/9768, (Thu, Jan 15th)</strong><br></a></li>
-            <li><a href="https://isc.sans.edu/diary/rss/32628" title="Introduction&amp;#xd;" target="_blank"><strong>Infection repeatedly adds scheduled tasks and increases traffic to the same C2 domain, (Wed, Jan 14th)</strong><br>Introduction&amp;#xd;</a></li>
-            <li><a href="https://isc.sans.edu/diary/rss/32626" title="" target="_blank"><strong>ISC Stormcast For Wednesday, January 14th, 2026 https://isc.sans.edu/podcastdetail/9766, (Wed, Jan 14th)</strong><br></a></li>
-            <li><a href="https://isc.sans.edu/diary/rss/32624" title="Today, Microsoft released patches for 113 vulnerabilities. One of these vulnerabilities affected the Edge browser and was patched upstream by Chromium.&amp;#xd;" target="_blank"><strong>January 2026 Microsoft Patch Tuesday Summary, (Tue, Jan 13th)</strong><br>Today, Microsoft released patches for 113 vulnerabilities. One of these vulnerabilities affected the Edge browser and was patched upstream by Chromium.&amp;#xd;</a></li>
-            <li><a href="https://isc.sans.edu/diary/rss/32622" title="" target="_blank"><strong>ISC Stormcast For Tuesday, January 13th, 2026 https://isc.sans.edu/podcastdetail/9764, (Tue, Jan 13th)</strong><br></a></li>
-            <li><a href="https://isc.sans.edu/diary/rss/32620" title="" target="_blank"><strong>ISC Stormcast For Monday, January 12th, 2026 https://isc.sans.edu/podcastdetail/9762, (Mon, Jan 12th)</strong><br></a></li>
         </ul>
         <h2 id="krebs-on-security"><a href="https://krebsonsecurity.com/">Krebs on Security</a></h2>
         <p class="last-updated">Wed, 14 Jan 2026 00:47:38 +0000</p>
