deploy: 4cb871b83cc528512dac558e4ff595cbd22f92f5

--- a/security.html
+++ b/security.html
@@ -85,8 +85,9 @@ The attacks leverage advanced voice phishing (aka vishing) and bogus credential 
 The attacks leverage advanced voice phishing (aka vishing) and bogus credential harvesting sites mimicking targeted companies to gain unauthorized access to victim</a></li>
         </ul>
         <h2 id="sans-internet-storm-center"><a href="https://isc.sans.edu/">SANS Internet Storm Center</a></h2>
-        <p class="last-updated">Tue, 03 Feb 2026 01:40:03 +0000</p>
+        <p class="last-updated">Tue, 03 Feb 2026 02:00:05 +0000</p>
         <ul class="news-list">
+            <li><a href="https://isc.sans.edu/diary/rss/32676" title="" target="_blank"><strong>ISC Stormcast For Tuesday, February 3rd, 2026 https://isc.sans.edu/podcastdetail/9792, (Tue, Feb 3rd)</strong><br></a></li>
             <li><a href="https://isc.sans.edu/diary/rss/32674" title="Yesterday, a single IP address (%%ip:204.76.203.210%%) scanned a number of our sensors for what looks like an anthropic API node. The IP address is known to be a Tor exit node." target="_blank"><strong>Scanning for exposed Anthropic Models, (Mon, Feb 2nd)</strong><br>Yesterday, a single IP address (%%ip:204.76.203.210%%) scanned a number of our sensors for what looks like an anthropic API node. The IP address is known to be a Tor exit node.</a></li>
             <li><a href="https://isc.sans.edu/diary/rss/32672" title="" target="_blank"><strong>ISC Stormcast For Monday, February 2nd, 2026 https://isc.sans.edu/podcastdetail/9790, (Mon, Feb 2nd)</strong><br></a></li>
             <li><a href="https://isc.sans.edu/diary/rss/32668" title="Charlie, one of our readers, has forwarded an interesting phishing email. The email was sent to users of the Vivladi Webmail service. While not overly convincing, the email is likely sufficient to trick a non-empty group of users:" target="_blank"><strong>Google Presentations Abused for Phishing, (Fri, Jan 30th)</strong><br>Charlie, one of our readers, has forwarded an interesting phishing email. The email was sent to users of the Vivladi Webmail service. While not overly convincing, the email is likely sufficient to trick a non-empty group of users:</a></li>
@@ -96,7 +97,6 @@ The attacks leverage advanced voice phishing (aka vishing) and bogus credential 
             <li><a href="https://isc.sans.edu/diary/rss/32660" title="" target="_blank"><strong>ISC Stormcast For Wednesday, January 28th, 2026 https://isc.sans.edu/podcastdetail/9784, (Wed, Jan 28th)</strong><br></a></li>
             <li><a href="https://isc.sans.edu/diary/rss/32650" title="[This is a Guest Diary by Fares Azhari, an ISC intern as part of the SANS.edu BACS program]" target="_blank"><strong>Initial Stages of Romance Scams [Guest Diary], (Tue, Jan 27th)</strong><br>[This is a Guest Diary by Fares Azhari, an ISC intern as part of the SANS.edu BACS program]</a></li>
             <li><a href="https://isc.sans.edu/diary/rss/32658" title="" target="_blank"><strong>ISC Stormcast For Tuesday, January 27th, 2026 https://isc.sans.edu/podcastdetail/9782, (Tue, Jan 27th)</strong><br></a></li>
-            <li><a href="https://isc.sans.edu/diary/rss/32656" title="" target="_blank"><strong>ISC Stormcast For Monday, January 26th, 2026 https://isc.sans.edu/podcastdetail/9780, (Mon, Jan 26th)</strong><br></a></li>
         </ul>
         <footer>
         <p>Author: David C. Backer</p>
